# dog

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  configure  dog.cpp  dog.h  dog.hpp
.github/workflows/: ccpp.yml
include/: command.hpp  console.hpp  dog.hpp  event.hpp  main.hpp
src/: command.cpp  console.cpp  dog.cpp  event.cpp  main.cpp
test/: test.cpp
timercpp/: CMakeLists.txt  timercpp.cpp  timercpp.h
